--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1652,6 +1652,10 @@ button,
         font-size: 2.75rem;
         position: relative;
         top: 0.05em; }
+      .features article .image:before {
+        width: 1.5rem;
+        height: 1.5rem;
+      }
       .features article .icon:after {
         -moz-transform: rotate(45deg);
         -webkit-transform: rotate(45deg);
