--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,9 +1,8 @@
-
 .App {
   height: 100%;
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .profile-container {
@@ -15,14 +14,20 @@
 .components-container {
   margin-left: 30rem;
   margin-top: 8rem;
+  margin-right: 3rem;
   width: 100%;
+  max-width: fit-content;
+}
+
+.component {
+  margin-bottom: 10rem;
 }
 
 .nav-container {
   position: fixed;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 2rem;
+  width: 3rem;
+  height: 22rem;
 }
