--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,6 +1,16 @@
 html {
-  background-color: #171717;
+    background-color: #1f1f1f;
 }
+
+:root {
+  --primary-color: #28e98c; /* Define the global CSS variable */
+  --secondary-color: #c5c5c5;
+  --border-color: #ccc;
+
+  --black-text: #1f1f1f;
+  --gray-text: #ccc;
+}
+
 
 body {
   margin: 0;
@@ -19,11 +29,19 @@ code {
     monospace;
 }
 
-:root {
-  --primary-color: #28e98c; /* Define the global CSS variable */
-  --secondary-color: #c5c5c5;
-  --border-color: #ccc;
+#bg-video {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  opacity: 0.5;
+}
 
-  --black-text: #1f1f1f;
-  --gray-text: #ccc;
+#root {
+  position: relative;
+  z-index: 1;
+  color: #fff;
 }
