--- a/src/css/Education.css
+++ b/src/css/Education.css
@@ -10,10 +10,13 @@
     border: 0.5px solid var(--border-color);
     border-radius: 1rem;
     width: 80%;
+    cursor: pointer;
+    text-decoration: none;
     transition: all 0.01s ease;
 }
 
 .education-title {
+    color: white;
     font-size: 1.5rem;
     font-weight: 400;
     margin-bottom: 0.5rem;
@@ -24,6 +27,10 @@
     font-weight: 300;
     color: var(--secondary-color);
     margin-bottom: 2rem;
+}
+
+.education-date {
+    color: white;
 }
 
 
