--- a/src/css/ContactForm.css
+++ b/src/css/ContactForm.css
@@ -84,12 +84,19 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    cursor: pointer;
+    transition: all 0.02s ease;
 }
 
 .attachment-label .attachment-icon, .attachment-label p{
     font-size: 0.9rem;
     font-weight: 300;
     margin-right: 0.5rem;
+    transition: all 0.02s ease;
+}
+
+.attachment-label:hover {
+    color: var(--primary-color);
 }
 
 .attachment-icon {
@@ -98,6 +105,7 @@
 
 #attachment {
     display:contents;
+    cursor: pointer;
 }
 
 .file-name {
@@ -108,7 +116,9 @@
 }
 
 .contact-attachment {
+    cursor: pointer;
     margin-bottom: 2rem;
+    transition: all 0.02s ease;
 }
 
 .contact-email {
