--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -35,7 +35,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  margin-top: 17rem;
+  margin-top: 48px;
   animation: move-up-animation 0.8s ease-out forwards;
 }
 
