--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -34,20 +34,21 @@
     padding-left: 2rem;
 }
 
+.project0 {
+    background-image: url('../assets/project0-cover.png');
+}
+
 .project1 {
     background-image: url('../assets/project1-cover.png');
-    opacity: 0.8;
 }
 
 .project2 {
     background-image: url('../assets/project2-cover.png');
-    opacity: 0.8;
 }
 
 .project3 {
     background-image: url('../assets/project3-cover.png');
     background-size: cover; /* Scale the image to cover the element */   
-    opacity: 0.8; 
 }
 
 .project-primary-inner {
